@@ -4,7 +4,9 @@ AUX sabnzbd.init 1213 SHA256 863e2980a815773c4a9b34a720d1ff7dc3bfbff270dff2d7bb1
 AUX sabnzbd.logrotate 177 SHA256 0063c24056a2dfaa48192089451adfc6647bbb201f7c64185ee0f710d29af61a SHA512 52408ccb8b812b9da1e62c9a22ca705a0f4d5d7e194c9ea0637f34e52344372071ac6fbb1055d9cfce8b3264629e6fed9d1a59490fe821d3a1ac08835c4ec146 WHIRLPOOL f2856d569bd0c40acc825621b9546a8d0239a3d3a80052dfe45095cc836a3cb52d3dc9e4e099feb272a4acf657c2f92eb86ac0d062804c83ef4dea1500e5cc1f
 DIST SABnzbd-0.7.16-src.tar.gz 2275768 SHA256 2c50496c8be81ac4498944a5209b2c6b3bdfecc48cf4e0df54552c5d985e5772 SHA512 ae97f093c34a100ab92949eb25a48db4c7d7d06c1fc082d3e8390d84e15dbdbbe4e682f47532cb84571039caab9aed377957522fa07b6a0f49c368eb77d66144 WHIRLPOOL 470f300f9f7b5f833d14c8170aee8690cddcfb9e442c3d9a6d108b155d6b2f7afab19010a7bf650c31e4ade5ca680433245a9c226948b52d8301861f5dc35965
 DIST SABnzbd-0.7.17-src.tar.gz 2310300 SHA256 a501517dbaf161deab2153118ff3b44512ee1d8984c3603bf17c593cf080eb09 SHA512 5f8ad391f698f5c8c069ea9a4be59124096ebd24793889db215cbc678dfd572c974083acd0d21b8b776d55cb9ebd8553952147ec2cd1768f3aab66cfba4ebaf3 WHIRLPOOL 6ec6a531c683607d36b533a1ae078ef87e5afdaa02e08588c8b5f045e735a1aa64c234e71c5d7218d15fed0eb64ef12f1a280ef65ed208b0d7a5e1408997fbca
+DIST SABnzbd-0.7.18-src.tar.gz 2317137 SHA256 aa05697d901b3e334e92f274b2e8788973059840be656a1545e8f2a4b070b014 SHA512 db7606be913fc89cdea0c037594b614c16f3887b32d1133c5f7a6c92f3dac5bec2250972e35941cd462e65bb29e91db2a43ff1e6624d827223afb957ec7922fe WHIRLPOOL 313e74425555af3dc86e111440974fefef42531018faad14a2a39649cef21a2b2d1d5a917c4ec13089ef9a46a2c31fe56b544ae0fa72628497782be756e8014f
 EBUILD sabnzbd-0.7.16.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.17.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
-MISC ChangeLog 3920 SHA256 c433ff68be2fa922e8e89fc4a76139ccadd34029fb6e667e4e2fb1223c61229a SHA512 84d151b34f153a98aa2265b85d4316a32099f74e22c5d1141f4f576af8ef10df8f5a2970514004db013255b0f9b6434c893d483cbe97c921cbfb9d2194928b3f WHIRLPOOL 731720398eaef8341644ffaf1aa6294ad6e141e70bff2f34233c75a159b2b6908ed26aec31220d121cbfeea88d1a98092278f1adb75f58d43eed0a6236dec7b0
+EBUILD sabnzbd-0.7.18.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
+MISC ChangeLog 4095 SHA256 15bc5d91fcd2d014341838d5b07b4479424f8b025a2765f9315dbe7a49493825 SHA512 5149d3b6825522ef841f3e9c54920f99cd30323acbb62d303f8e995f665d0947bfd66b1092a5afe4325cd6c83328740d0e137c9130450135565230a074da2699 WHIRLPOOL f193bca45640232b90d35ea0d10a5514fb4d95e326ba8e417295440dd5b4b5de8d584fa4c87f7804916c22385f6887760c48a3b668b0ec407156630a5274db90
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
